# learning-agentic-research-agent

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Justfile  LICENSE  README.md  pyproject.toml  specs.md
.claude/: settings.json
.claude/commands/: codebase-qa.md  promote-enhancements.md  propose-enhancements.md  resume-phase.md  start-phase.md  update-learnings.md
.git-hooks/: post-commit-audit.sh  validate-commit-msg.sh
docs/: model-comparison-2026-01-03.md
docs/checklists/: phase-1.md  phase-2.md
docs/enhancements/: README.md  agent-robustness.md  developer-experience.md  observability.md  schema-validation.md
docs/implementation_plans/: phase-1.md  phase-2.md
docs/learning-logs/: MASTER_LOG.md  phase-1-log.md  phase-2-log.md
docs/reference/: claude-code-tips.md  poe-api-troubleshooting.md  sample-prompts.md  workflow-guide.md
docs/test-plans/: README.md  phase-2-group-2.md  phase-2-group-4.md
scripts/: CLAUDE.md  README.md  test_poe_models.py
src/: client.py  config.py  main.py
src/agents/: agent.py  async_agent.py  tools.py
src/tui/: __init__.py  app.py  events.py  widgets.py
tests/: conftest.py  test_config.py  test_main.py  test_model_integration.py
tests/agents/: test_agent.py  test_async_agent.py  test_integration.py  test_tools.py
tests/tui/: test_app.py  test_events.py  test_widgets.py
