[project]
name = "research-assistant"
version = "0.1.0"
description = "Multi-agent research assistant demonstrating RAG, MCP, and A2A"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-python>=0.0.1",
    "chromadb>=1.4.0",
    "fastmcp>=2.14.2",
    "openai>=2.14.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.pyright]
include = ["src"]
exclude = [
    "**/__pycache__",
    ".venv",
    "data",
    "notes",
]
typeCheckingMode = "basic"
pythonVersion = "3.12"
reportMissingImports = true
reportMissingTypeStubs = false